tests/fixtures/invalid/none_notin_bytes.py
# Cannot use 'not in' with None and Bytes
x: bool = None not in b"hello"
